// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleBitbucketWebhook Should create channel, set topic and invite author and reviewers on PR opened 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [
    {
      "is_private": true,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "invitesToChannels": [
    {
      "channel": "12345",
      "force": true,
      "users": "test.author@test.com,test.reviewer1@test.com",
    },
  ],
  "kicksFromChannels": [],
  "lookedUpUsers": [
    {
      "email": "test.author@test.com",
    },
    {
      "email": "test.reviewer1@test.com",
    },
  ],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "The pull request was opened by Test Author.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "Quite a long and comprehensive description to get channel title longer than 250 symbols which is a maximum length for the Slack",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "12345",
      "text": "The pull request was opened by Test Author. Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
    },
  ],
  "setChannelTopics": [
    {
      "channel": "12345",
      "topic": ":git: Pull request: *Quite a long and comprehensive title to get channel title longer than 250 symbols which is a maximum length for the Slack* | :git-branch: To branch: *TEST-PROJ/test-repository:master*",
    },
  ],
}
`;

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR declining 1`] = `
{
  "archivedChannels": [
    {
      "channel": "12345",
    },
  ],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "channel": "pr-test-proj-test-repository-1",
      "text": "The pull request was declined by Test Author.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR deletion 1`] = `
{
  "archivedChannels": [
    {
      "channel": "12345",
    },
  ],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "channel": "pr-test-proj-test-repository-1",
      "text": "The pull request was deleted by Test Author.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR merge 1`] = `
{
  "archivedChannels": [
    {
      "channel": "12345",
    },
  ],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "channel": "pr-test-proj-test-repository-1",
      "text": "The pull request was merged by Test Author. Well done, thank you all.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR approval/unapproval/needs work 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "*Test Reviewer 1* requested changes for <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "Needs work: Test Reviewer 1",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "text": "*Test Reviewer 1* requested changes for <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
    },
    {
      "blocks": [
        {
          "text": {
            "text": "*Test Reviewer 1* unapproved <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "Unapproved: Test Reviewer 1",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "text": "*Test Reviewer 1* unapproved <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
    },
    {
      "blocks": [
        {
          "text": {
            "text": "*Test Reviewer 1* approved <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "All reviewers approved PR. Seems like you can <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|merge it>.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "text": "*Test Reviewer 1* approved <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR comment 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "*Test Reviewer 1* <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|commented>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "text": "*Test Reviewer 1* <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|commented>:

Test comment",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR commit 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "A <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/commits/from-ref-commit-hash|new commit> was added to the pull request by Test Author.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment for TEST-PROJ, test-repository, from-ref-commit-hash",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "text": "A <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/commits/from-ref-commit-hash|new commit> was added to the pull request by Test Author. Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>.",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should update channel participants on reviewers list update 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [
    {
      "channel": "12345",
      "force": true,
      "users": "test.reviewer2@test.com",
    },
  ],
  "kicksFromChannels": [
    {
      "channel": "12345",
      "user": "test.reviewer1@test.com",
    },
  ],
  "lookedUpUsers": [
    {
      "email": "test.reviewer2@test.com",
    },
    {
      "email": "test.reviewer1@test.com",
    },
  ],
  "sentMessages": [],
  "setChannelTopics": [],
}
`;
